// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFlipContainer Should animate if shouldAnimate is a function that returns true 1`] = `
<Wrapper
  shouldAnimate={[Function]}
>
  <FlipContainer
    defer={false}
    shouldAnimate={[Function]}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should animate if shouldAnimate is true 1`] = `
<Wrapper
  shouldAnimate={true}
>
  <FlipContainer
    defer={false}
    shouldAnimate={true}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should not animate if shouldAnimate is a function that returns false 1`] = `
<Wrapper
  shouldAnimate={[Function]}
>
  <FlipContainer
    defer={false}
    shouldAnimate={[Function]}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should not animate if shouldAnimate is false 1`] = `
<Wrapper
  shouldAnimate={false}
>
  <FlipContainer
    defer={false}
    shouldAnimate={false}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should render as animating if play returned a promise 1`] = `
<Wrapper>
  <FlipContainer
    defer={false}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_animation",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer Should render back as static if the play promise was resolved 1`] = `
<Wrapper>
  <FlipContainer
    defer={false}
  >
    <div>
      <FlipElement>
        <Component
          flip={
            Object {
              "setFlipElement": [Function],
              "status": "ReactFlip_static",
            }
          }
        >
          <div>
            Element
          </div>
        </Component>
      </FlipElement>
    </div>
  </FlipContainer>
</Wrapper>
`;

exports[`ReactFlipContainer The container should render its children 1`] = `
<div>
  Content
</div>
`;
